--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <div class="card">
-        <img src="img/2.jpg">
-        <img src="img/lisa2.png">
+        <img src="2.jpg">
+        <img src="lisa2.png">
         <div class="content">
             <div class="name">Lisa</div>
             <div class="fullName">Lalisa Manobal</div>
         </div>
     </div>
     <div class="card">
-        <img src="img/rose.jpg">
-        <img src="img/rose2.png">
+        <img src="rose.jpg">
+        <img src="rose2.png">
         <div class="content">
             <div class="name">Rose'</div>
             <div class="fullName">Parl Chaeyoung</div>
@@ -28,16 +28,16 @@
     </div>
 
     <div class="card">
-        <img src="img/jennie.jpg">
-        <img src="img/jennie2.png">
+        <img src="jennie.jpg">
+        <img src="jennie2.png">
         <div class="content">
             <div class="name">Jennie</div>
             <div class="fullName">Jennie Ruby Jane</div>
         </div>
     </div>
     <div class="card">
-        <img src="img/jisoo.jpg">
-        <img src="img/jisoo2.png">
+        <img src="jisoo.jpg">
+        <img src="jisoo2.png">
         <div class="content">
             <div class="name">Jisoo</div>
             <div class="fullName">Kim Jisoo</div>
