--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+    div class="text-alg"> <p>BlackPink</p> </div>
     <div class="card">
         <img src="2.jpg">
         <img src="lisa2.png">
